--- a/craftcms/templates/index.html
+++ b/craftcms/templates/index.html
@@ -7,6 +7,9 @@
     <title>React + Craft 3 Demo</title>
 </head>
 <body>
-    
+    <noscript>
+		You need to enable JavaScript to run this app.
+	</noscript>
+	<root-view></root-view>
 </body>
 </html>
