--- a/src/base.css
+++ b/src/base.css
@@ -34,22 +34,20 @@ main
     flex-flow: column wrap;
 }
 
-.t-login
+.t-login form,
+.t-signup form
 {
+    display: grid;
+    grid-template-rows: 1fr;
+    gap: 2rem;
     background-color: var(--off-white);
     border-radius: 1rem;
     width: 420px;
     padding: 2rem;
 }
 
-.t-login form
-{
-    display: grid;
-    grid-template-rows: 1fr;
-    gap: 2rem;
-}
-
-.t-login form input
+.t-login form input,
+.t-signup form input
 {
     border: 2px solid rgba(23, 41, 81, 0.3);
     height: 48px;
@@ -57,7 +55,8 @@ main
     padding: 14px 16px 12px 16px;
 }
 
-.t-login form button
+.t-login form button,
+.t-signup form button
 {
     height: 36px;
     line-height: 32px;
@@ -70,4 +69,20 @@ main
     cursor: pointer;
     text-transform: uppercase;
     font-size: 14px;
+}
+
+.t-login p,
+.t-signup p
+{
+    color: var(--off-white);
+    margin-top: 2rem;
+    text-align: center;
+    display: block;
+}
+
+.t-login p button,
+.t-signup p button
+{
+    color: var(--primary);
+    cursor: pointer;
 }
