--- a/src/base.css
+++ b/src/base.css
@@ -34,55 +34,30 @@ main
     flex-flow: column wrap;
 }
 
-.t-login form,
-.t-signup form
+main.t-dashboard
 {
     display: grid;
-    grid-template-rows: 1fr;
+    grid-template-columns: minmax(190px, 260px) 1fr;
     gap: 2rem;
-    background-color: var(--off-white);
+    padding: 2rem 2rem 2rem 0;
+    height: 100vh;
+    overflow: hidden;
+}
+
+main.t-dashboard section
+{
     border-radius: 1rem;
-    width: 420px;
-    padding: 2rem;
-}
-
-.t-login form input,
-.t-signup form input
-{
-    border: 2px solid rgba(23, 41, 81, 0.3);
-    height: 48px;
-    line-height: 48px;
-    padding: 14px 16px 12px 16px;
-}
-
-.t-login form button,
-.t-signup form button
-{
-    height: 36px;
-    line-height: 32px;
-    font-weight: 600;
-    color: var(--white);
-    background-color: var(--primary);
-    border: 2px solid var(--primary);
-    padding: 0 1rem;
-    border-radius: 2px;
-    cursor: pointer;
-    text-transform: uppercase;
-    font-size: 14px;
-}
-
-.t-login p,
-.t-signup p
-{
-    color: var(--off-white);
-    margin-top: 2rem;
-    text-align: center;
+    background-color: var(--off-white);
     display: block;
+    width: 100%;
+    height: 100%;
 }
 
-.t-login p button,
-.t-signup p button
+main.t-dashboard aside
 {
-    color: var(--primary);
-    cursor: pointer;
+    display: flex;
+    flex-flow: column wrap;
+    width: 100%;
+    height: 100%;
+    color: var(--off-white);
 }
