Added initial courses view for new user

--- a/src/base.scss
+++ b/src/base.scss
@@ -46,7 +46,7 @@ main.t-dashboard
     overflow: hidden;
 }
 
-main.t-dashboard section
+main.t-dashboard article
 {
     border-radius: 1rem;
     background-color: var(--off-white);
