--- a/src/courses.scss
+++ b/src/courses.scss
@@ -1,10 +1,17 @@
 .courses{
+    .shell{
+        display: block;
+        width: 100%;
+        height: 100%;
+    }
+
     header{
         display: flex;
         justify-content: space-between;
         align-items: center;
         flex-flow: row nowrap;
         width: 100%;
+        margin-bottom: 2rem;
 
         h1{
             font-weight: 600;
@@ -30,7 +37,7 @@
             align-items: center;
             font-weight: 600;
             cursor: pointer;
-            box-shadow: 0 4px 16px rgba(255, 163, 106, 0.6);
+            box-shadow: 0 8px 32px rgba(255, 163, 106, 0.87);
             transition: all 75ms ease;
             vertical-align: top;
             font-size: 0.825rem;
@@ -178,6 +185,25 @@
                     height: 1.1rem;
                 }
             }
+        }
+    }
+
+    section{
+        &.is-empty{
+            font-size: 4rem;
+            font-weight: 600;
+            opacity: 0.07;
+            display: flex;
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            top: 0;
+            left: 0;
+            user-select: none;
+            pointer-events: none;
+            justify-content: center;
+            align-items: center;
+            flex-flow: column wrap;
         }
     }
 }
